--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="texto1">
                 <h1>Bienvenidos Geeks</h1>
                 <br>
-                <p> Explora el corazón de Tokyo a través de nuestra guía única para los amantes de los videojuegos, mangas y más. Sumérgete en la vibrante cultura geek de la ciudad mientras descubres los mejores lugares para comprar tus tesoros digitales y físicos. Desde tiendas de videojuegos retro hasta escondites de mangas raros, te llevaremos en un viaje inolvidable por la capital geek del mundo. ¡Prepárate para vivir Tokio como nunca antes!</p>
+                <p> Explora el corazón de Tokyo a través de nuestra guía única para los amantes de los videojuegos, mangas y más. Sumérgete en la vibrante cultura geek de la ciudad mientras descubres los mejores lugares para comprar tus tesoros digitales y físicos. Desde tiendas de videojuegos retro hasta escondites de mangas raros, te llevaremos en un viaje inolvidable por la capital geek del mundo. ¡Prepárate para vivir Tokio como nunca antes!!!</p>
                 <br>
                 <a href="./paginas/contacto.html" class="boton1">¡Queremos conocerte!</a>
             </div>
